--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,16 @@ after_sucess:
     - docker push stevenparrott/multi-nginx
     - docker push stevenparrott/multi-server
     - docker push stevenparrott/multi-worker
+
+deploy:
+    # edge: true
+    provider: elasticbeanstalk
+    region: us-east-1
+    app: multi-docker
+    env: MultiDocker-env
+    bucket_name: elasticbeanstalk-us-east-1-933858227200
+    bucket_path: docker-multi
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
